Use symlink to /tmp as socket directory by default

This patch is based on the one written by Ansgar Burchardt to use
a socket directory linked to /tmp/<username>-akonadi.<random> instead
of the hard-coded one from ~/.local/share/akonadi.
With this patch Akonadi will start on systems with $HOME on AFS without
any further configuration needed.

BUG: 179006