server/src/utils.cpp
@@ -22,9 +22,21 @@
 
 #include "libs/xdgbasedirs_p.h"
 
+#include <QtCore/QDebug>
 #include <QtCore/QDir>
 #include <QtCore/QFileInfo>
 #include <QtCore/QSettings>
+#include <QtNetwork/QHostInfo>
+
+#include <cerrno>
+#include <cstdlib>
+#include <pwd.h>
+#include <sys/types.h>
+#include <unistd.h>
+
+static QString akonadiSocketDirectory();
+static bool checkSocketDirectory( const QString &path );
+static bool createSocketDirectory( const QString &link, const QString &tmpl );
 
 using namespace Akonadi;
 
@@ -33,7 +45,16 @@ QString Utils::preferredSocketDirectory( const QString &defaultDirectory )
   const QString serverConfigFile = XdgBaseDirs::akonadiServerConfigFile( XdgBaseDirs::ReadWrite );
   const QSettings serverSettings( serverConfigFile, QSettings::IniFormat );
 
-  QString socketDir = serverSettings.value( QLatin1String( "Connection/SocketDirectory" ), defaultDirectory ).toString();
+  QString socketDir = defaultDirectory;
+  if ( !serverSettings.contains( QLatin1String( "Connection/SocketDirectory" ) ) ) {
+    // if no socket directory is defined, use the symlinked from /tmp
+    socketDir = akonadiSocketDirectory();
+
+    if ( socketDir.isEmpty() ) // if that does not work, fall back on default
+      socketDir = defaultDirectory;
+  } else {
+    socketDir = serverSettings.value( QLatin1String( "Connection/SocketDirectory" ), defaultDirectory ).toString();
+  }
 
   const QString userName = QString::fromLocal8Bit( qgetenv( "USER" ) );
   if ( socketDir.contains( QLatin1String( "$USER" ) ) && !userName.isEmpty() )
@@ -49,4 +70,75 @@ QString Utils::preferredSocketDirectory( const QString &defaultDirectory )
     QDir::home().mkpath( dirInfo.absoluteFilePath() );
 
   return socketDir;
+}
+
+QString akonadiSocketDirectory()
+{
+  const QString hostname = QHostInfo::localHostName();
+
+  if ( hostname.isEmpty() ) {
+    qCritical() << "QHostInfo::localHostName() failed";
+    return QString();
+  }
+
+  const uid_t uid = getuid();
+  const struct passwd *pw_ent = getpwuid( uid );
+  if ( !pw_ent ) {
+    qCritical() << "Could not get passwd entry for user id" << uid;
+    return QString();
+  }
+
+  const QString link = XdgBaseDirs::saveDir( "data", QLatin1String( "akonadi" ) ) + QLatin1Char( '/' ) + QLatin1String( "socket-" ) + hostname;
+  const QString tmpl = QLatin1String( "akonadi-" ) + QLatin1String( pw_ent->pw_name ) + QLatin1String( ".XXXXXX" );
+
+  if ( checkSocketDirectory( link ) )
+    return link;
+
+  if ( createSocketDirectory( link, tmpl ) )
+    return link;
+
+  qCritical() << "Could not create socket directory for Akonadi.";
+  return QString();
+}
+
+static bool checkSocketDirectory( const QString &path )
+{
+  QFileInfo info( path );
+
+  if ( !info.exists() )
+    return false;
+
+  if ( info.isSymLink() )
+    info = QFileInfo( info.symLinkTarget() );
+
+  if ( !info.isDir() )
+    return false;
+
+  if ( info.ownerId() != getuid() )
+    return false;
+
+  return true;
+}
+
+static bool createSocketDirectory( const QString &link, const QString &tmpl )
+{
+  QString directory = QString::fromLatin1( "%1%2%3" ).arg( QDir::tempPath() ).arg( QDir::separator() ).arg( tmpl );
+
+  QByteArray directoryString = directory.toLocal8Bit().data();
+
+  if ( !mkdtemp( directoryString.data() ) ) {
+    qCritical() << "Creating socket directory with template" << directoryString << "failed:" << strerror( errno );
+    return false;
+  }
+
+  directory = QString::fromLocal8Bit( directoryString );
+
+  QFile::remove( link );
+
+  if ( !QFile::link( directory, link ) ) {
+    qCritical() << "Creating symlink from" << directory << "to" << link << "failed";
+    return false;
+  }
+
+  return true;
 }
